This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
12/4/25: Fixed min size slider's text box in Autocontouring dialog (In 4.2).

12/4/25: Prevented trying to create frame directory when SerialEM is not
running on DE server computer (In 4.2).

12/4/25 Added option to use EDM dose percentage instead of beam intensity in
tilt series.

12/4/25: Fixed a bug where SetDoseRate using an EDM did not use the correct dose 
percentage stored in low dose parameters.

12/4/25: In multigrid, made it retry loading the grid on JEOL if it is not
actually on the stage or if load ends with error.

12/4/25: Allowed "C1" to be used in aperture commands instead of 0 for JEOL
scopes with extra apertures.

12/3/25: Fixed picking folder for DE frame saving when server is local, broken
11/20.

12/3/25: SEM_4-2-13
12/3/25: Fixed setting of frame-saving subdirectory when SerialEM is not
running on DE server computer (In 4.2).

12/2/25: For JEOL, fixed setting aperture size by index and made Get Names in
multigrid dialog recognize which grid is on the stage (In 4.2).

12/1/25: Added a separate property, RealignItemMinAnchorMargin, for the
minimum distance to the edge of a map wanted for preferring an anchor map over
a larger map.

12/1/25: Fixed crash in startup when there is a plugin STEM camera.

11/26/25: Added script command to get all parameters for a low dose area into
an array variable.

11/25/25: Added ability to show STEM channels in multiple, separate windows to
the right of the main window, similar to the side-by-side FFT display.  This
is controlled from a dialog opened from the Window menu.

11/21/25: Added support for Dark mode for K3 cameras.

11/21/25: Fixed frame alignment for DE cameras to account for frames now being