@@ -4028,7 +4028,7 @@ BEGIN
     LTEXT           "(currently 9)",IDC_STAT_CUR_SETTING,112,65,38,8
 END
 
-IDD_AUTOCONTOUR DIALOGEX 0, 0, 158, 280
+IDD_AUTOCONTOUR DIALOGEX 0, 0, 158, 279
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Autocontouring Grid Squares"
@@ -4043,8 +4043,8 @@ BEGIN
     CONTROL         "Size",IDC_RGROUP_BY_SIZE,"Button",BS_AUTORADIOBUTTON | WS_GROUP,82,94,25,10
     CONTROL         "Mean value",IDC_RGROUP_BY_MEAN,"Button",BS_AUTORADIOBUTTON,109,94,45,10
     LTEXT           "Split into 8",IDC_STAT_SHOW_GROUPS,5,95,31,8
-    DEFPUSHBUTTON   "OK",IDOK,19,263,50,12
-    PUSHBUTTON      "Cancel",IDCANCEL,89,263,50,12
+    DEFPUSHBUTTON   "OK",IDOK,19,262,50,12
+    PUSHBUTTON      "Cancel",IDCANCEL,89,262,50,12
     EDITTEXT        IDC_IDC_EDIT_TO_PIXELS,17,12,28,12,ES_AUTOHSCROLL
     LTEXT           "pixels",IDC_STAT_TO_PIXELS,46,13,19,8
     EDITTEXT        IDC_EDIT_TO_PIX_SIZE,17,26,20,12,ES_AUTOHSCROLL
@@ -4068,40 +4068,40 @@ BEGIN
     CONTROL         "7",IDC_CHECK_GROUP7,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,121,108,15,10
     CONTROL         "8",IDC_CHECK_GROUP8,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,137,108,13,10
     LTEXT           "Show:",IDC_STAT_SHOW_CREATE,5,109,19,8
-    CONTROL         "",IDC_SLIDER_MIN_MEAN,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,3,120,124,12
-    CONTROL         "",IDC_SLIDER_MAX_MEAN,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,3,141,124,12
-    CONTROL         "",IDC_SLIDER_MIN_SIZE,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,3,162,124,12
-    CONTROL         "",IDC_SLIDER_SQUARE_SD,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,3,204,124,12
-    CONTROL         "",IDC_SLIDER_IRREGULARITY,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,3,183,124,12
-    CONTROL         "",IDC_SLIDER_BORDER_DIST,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,3,226,124,12
-    EDITTEXT        IDC_EDIT_MIN_MEAN,127,120,27,12,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_MAX_MEAN,127,140,27,12,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_MIN_SIZE,127,161,27,12,ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT_BORDER_DIST,127,225,27,12,ES_AUTOHSCROLL
-    PUSHBUTTON      "Make Navigator Polygons",IDC_BUT_CREATE_POLYS,5,247,88,12
+    CONTROL         "",IDC_SLIDER_MIN_MEAN,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,3,161,124,12
+    CONTROL         "",IDC_SLIDER_MAX_MEAN,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,3,182,124,12
+    CONTROL         "",IDC_SLIDER_MIN_SIZE,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,3,120,124,12
+    CONTROL         "",IDC_SLIDER_SQUARE_SD,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,3,225,124,12
+    CONTROL         "",IDC_SLIDER_IRREGULARITY,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,3,204,124,12
+    CONTROL         "",IDC_SLIDER_BORDER_DIST,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,3,141,124,12
+    EDITTEXT        IDC_EDIT_MIN_MEAN,127,161,27,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_MAX_MEAN,127,181,27,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_MIN_SIZE,127,119,27,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_BORDER_DIST,127,140,27,12,ES_AUTOHSCROLL
+    PUSHBUTTON      "Make Navigator Polygons",IDC_BUT_CREATE_POLYS,5,246,88,12
     PUSHBUTTON      "Clear Data",IDC_BUT_CLEAR_POLYS,96,78,50,12
-    PUSHBUTTON      "Undo",IDC_BUT_UNDO_POLYS,102,247,50,12
-    LTEXT           "Static",IDC_STAT_IRREGULARITY,129,184,24,8
-    LTEXT           "Static",IDC_STAT_SQUARE_SD,128,204,24,8
-    LTEXT           "Static",IDC_STAT_MIN_LOWER_MEAN,5,131,20,8
-    LTEXT           "Static",IDC_STAT_MAX_LOWER_MEAN,105,131,20,8
-    LTEXT           "Static",IDC_STAT_MIN_UPPER_MEAN,5,153,20,8
-    LTEXT           "Static",IDC_STAT_MAX_UPPER_MEAN,105,152,20,8
-    LTEXT           "Static",IDC_STAT_MIN_MIN_SIZE,5,174,20,8
-    LTEXT           "Static",IDC_STAT_MAX_MIN_SIZE,105,174,20,8
-    LTEXT           "Static",IDC_STAT_MIN_SQUARE_SD,5,216,20,8
-    LTEXT           "Static",IDC_STAT_MAX_SQUARE_SD,105,216,20,8
-    LTEXT           "Static",IDC_STAT_MAX_IRREGULAR,105,195,20,8
-    LTEXT           "Static",IDC_STAT_MIN_IRREGULAR,5,195,20,8
-    LTEXT           "Static",IDC_STAT_MIN_BORDER_DIST,5,237,20,8
-    LTEXT           "Static",IDC_STAT_MAX_BORDER_DIST,105,237,20,8
-    CTEXT           "Lower mean cutoff",IDC_STAT_MIN_MEAN_LABEL,27,131,71,8
-    CTEXT           "Upper mean cutoff",IDC_STAT_MAX_MEAN_LABEL2,27,152,71,8
-    CTEXT           "Minimum size cutoff",IDC_STAT_MIN_SIZE_LABEL,27,173,71,8
-    CTEXT           "SD cutoff",IDC_STAT_PCT_BLACK_LABEL,27,215,71,8
-    CTEXT           "Irregularity cutoff",IDC_STAT_IRREGULAR_LABEL,27,194,71,8
-    CTEXT           "Edge distance cutoff",IDC_STAT_BORDER_DIST_LABEL,27,237,71,8
-    PUSHBUTTON      "?",IDC_BUTHELP,145,265,10,10
+    PUSHBUTTON      "Undo",IDC_BUT_UNDO_POLYS,102,246,50,12
+    LTEXT           "Static",IDC_STAT_IRREGULARITY,129,205,24,8
+    LTEXT           "Static",IDC_STAT_SQUARE_SD,128,225,24,8
+    LTEXT           "Static",IDC_STAT_MIN_LOWER_MEAN,5,172,20,8
+    LTEXT           "Static",IDC_STAT_MAX_LOWER_MEAN,105,172,20,8
+    LTEXT           "Static",IDC_STAT_MIN_UPPER_MEAN,5,194,20,8
+    LTEXT           "Static",IDC_STAT_MAX_UPPER_MEAN,105,193,20,8
+    LTEXT           "Static",IDC_STAT_MIN_MIN_SIZE,5,132,20,8
+    LTEXT           "Static",IDC_STAT_MAX_MIN_SIZE,105,132,20,8
+    LTEXT           "Static",IDC_STAT_MIN_SQUARE_SD,5,237,20,8
+    LTEXT           "Static",IDC_STAT_MAX_SQUARE_SD,105,237,20,8
+    LTEXT           "Static",IDC_STAT_MAX_IRREGULAR,105,216,20,8
+    LTEXT           "Static",IDC_STAT_MIN_IRREGULAR,5,216,20,8
+    LTEXT           "Static",IDC_STAT_MIN_BORDER_DIST,5,152,20,8
+    LTEXT           "Static",IDC_STAT_MAX_BORDER_DIST,105,152,20,8
+    CTEXT           "Lower mean cutoff",IDC_STAT_MIN_MEAN_LABEL,27,172,71,8
+    CTEXT           "Upper mean cutoff",IDC_STAT_MAX_MEAN_LABEL2,27,193,71,8
+    CTEXT           "Minimum size cutoff",IDC_STAT_MIN_SIZE_LABEL,27,131,71,8
+    CTEXT           "SD cutoff",IDC_STAT_PCT_BLACK_LABEL,27,236,71,8
+    CTEXT           "Irregularity cutoff",IDC_STAT_IRREGULAR_LABEL,27,215,71,8
+    CTEXT           "Edge distance cutoff",IDC_STAT_BORDER_DIST_LABEL,27,152,71,8
+    PUSHBUTTON      "?",IDC_BUTHELP,145,264,10,10
     CONTROL         "Make single polygons by clicking in image",IDC_CHECK_MAKE_ONE_POLY,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,56,144,10
     CONTROL         "Find contours only inside current polygon",IDC_CHECK_INSIDE_POLYGON,
@@ -5097,7 +5097,7 @@ BEGIN
         LEFTMARGIN, 3
         RIGHTMARGIN, 155
         TOPMARGIN, 3
-        BOTTOMMARGIN, 275
+        BOTTOMMARGIN, 274
     END
 
     IDD_STEP_AND_ADJUST_IS, DIALOG
