@@ -572,6 +572,9 @@
     <ClInclude Include="Shared\nn.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="XSliderCtrl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\bitmap1.bmp">
@@ -1390,6 +1393,9 @@
       <Filter>CSource Files</Filter>
     </ClCompile>
     <ClCompile Include="Utilities\PathOptimizer.cpp">
+      <Filter>CSource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="XSliderCtrl.cpp">
       <Filter>CSource Files</Filter>
     </ClCompile>
   </ItemGroup>
