@@ -3,6 +3,9 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+12/5/25: Made sliders have colored bars in Hole Finder and Autocontouring
+dialogs, rearranged sliders in the Autocontouring.
+
 12/4/25: Fixed min size slider's text box in Autocontouring dialog (In 4.2).
 
 12/4/25: Prevented trying to create frame directory when SerialEM is not
